--- a/style.css
+++ b/style.css
@@ -4,4 +4,10 @@
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
-
+a{
+    text-decoration: one;
+    color: #5a5a5a;
+}
+img{
+    cursor: pointer;
+}
