--- a/style.css
+++ b/style.css
@@ -16,11 +16,24 @@ img{
     align-items: center;
 }
 nav{
-    padding: 10px 2%;
+    padding: 5px 1%;
     justify-content: space-between;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     background: #fff;
     position: static;
     top: 0;
     z-index: 10;
+}   .nav-left img{height:25px;}
+.nav-right img{
+    width: 25px;
+    margin-right: 25px;
+}
+.nav-right .user-icon{
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 0;
+}
+.nav-left .menu-icon{
+    width: 22px;
+    margin-right: 25px;
 }
