--- a/style.css
+++ b/style.css
@@ -37,7 +37,21 @@ nav{
     width: 22px;
     margin-right: 25px;
 }
-
 .nav-left .logo{
     width: 130px;
+}
+.nav-middle .mic-icon{
+    width: 16px;
+}
+.nav-middle .search-box{
+    border: 1px solid #ccc;
+    margin-right: 15px;
+    padding: 6px 12px;
+    border-radius: 25px;
+}
+.nav-middle .search-box input{
+    width: 400px;
+    border: 0;
+    outline: 0;
+    background: transparent;
 }
