--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav{
     position: sticky;
     top: 0;
     z-index: 10;
-}   .nav-left img{height:25px;}
+}
 .nav-right img{
     width: 25px;
     margin-right: 25px;
@@ -63,10 +63,30 @@ nav{
 
 .sidebar{
     background: #fff;
-    width: 15%;
+    width: 18%;
     height: 100vh;
     position: fixed;
-    top: 0;
-    padding-left: 2%;
-    padding-right: 80px;
+    top: 10;
+    padding-left: 1%;
+    padding-right: 60px;
+}
+.shortcut-links a img{
+    width: 20px;
+    margin-right: 20px;
+}
+.shortcut-links a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: fit-content;
+    flex-wrap: wrap;
+}
+.shortcut-links a:first-child{
+    color: #ed3833;
+}
+.sidebar hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    width: 85%;
 }
