--- a/style.css
+++ b/style.css
@@ -147,8 +147,12 @@ nav{
     width: 100%;
     border-radius: 5px;
 }
-
 .vid-list .flex-div{
     align-items: flex-start;
     margin-top: 7px;
+}
+.vid-list .flex-div img{
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
