--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 a{
-    text-decoration: one;
+    text-decoration: none;
     color: #5a5a5a;
 }
 img{
@@ -155,4 +155,14 @@ nav{
     width: 35px;
     margin-right: 10px;
     border-radius: 50%;
+}
+.vid-info{
+    color: #5a5a5a;
+    font-size: 13px;
+}
+.vid-info a{
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 5px;
 }
