--- a/style.css
+++ b/style.css
@@ -129,6 +129,11 @@ nav{
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.large-container{
+    padding-left: 7%;
+}
+
+
 .banner{
     width: 100%;
 }
@@ -165,4 +170,34 @@ nav{
     font-weight: 600;
     display: block;
     margin-bottom: 5px;
+}
+
+
+@media (max-width: 900px){
+    .menu-icon{
+        display: none;
+    }
+    .sidebar{
+        display: none;
+    }
+    .container, .large-container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .nav-right img{
+        display: none;
+    }
+    .nav-right .user-icon{
+        display: block;
+        width: 30px;
+    }
+    .nav-middle .search-box input{
+        width: 100px;
+    }
+    .nav-middle .mic-icon{
+        display: none;
+    }
+    .logo{
+        width: 90px;
+    }
 }
