Added autoplay video

--- a/style.css
+++ b/style.css
@@ -201,3 +201,15 @@ nav{
         width: 90px;
     }
 }
+
+
+/* Play video page */
+.play-container{
+    padding-left: 2%;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
