--- a/style.css
+++ b/style.css
@@ -212,4 +212,13 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.play-video{
+    flex-basis: 69%;
+}
+.right-sidebar{
+    flex-basis: 30%;
+}
+.play-video video{
+    width: 100%;
+}
 
