--- a/style.css
+++ b/style.css
@@ -222,3 +222,11 @@ nav{
     width: 100%;
 }
 
+.side-video-list{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+.side-video-list img{
+    width: 100%;
+}
