--- a/style.css
+++ b/style.css
@@ -253,3 +253,7 @@ nav{
     font-size: 14px;
     color: #5a5a5a;
 } 
+.play-video .play-video-info a img{
+    width: 20px;
+    margin-right: 8px;
+}
