--- a/style.css
+++ b/style.css
@@ -257,3 +257,8 @@ nav{
     width: 20px;
     margin-right: 8px;
 }
+.play-video .play-video-info a{
+    display: inline-flex;
+    align-items: center;
+    margin-left: 15px;
+}
