--- a/style.css
+++ b/style.css
@@ -262,3 +262,22 @@ nav{
     align-items: center;
     margin-left: 15px;
 }
+.play-video hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 10px 0;
+}
+.publisher{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+.publisher div{
+    flex: 1;
+}
+.publisher img{
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 15px;
+}
