--- a/style.css
+++ b/style.css
@@ -275,9 +275,15 @@ nav{
 }
 .publisher div{
     flex: 1;
+    line-height: 18px;
 }
 .publisher img{
     width: 40px;
     border-radius: 50%;
-    margin-left: 15px;
+    margin-right: 15px;
+}
+.publisher div p{
+    color: #000;
+    font-weight: 600;
+    font-size: 18px;
 }
