--- a/style.css
+++ b/style.css
@@ -314,3 +314,13 @@ nav{
     color: #5a5a5a;
     margin-top: 15px;
 }
+.add-comment{
+    display: flex;
+    align-items: center;
+    margin: 30px 0;
+}
+.add-comment img{
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
