--- a/style.css
+++ b/style.css
@@ -324,3 +324,11 @@ nav{
     border-radius: 50%;
     margin-right: 15px;
 }
+.add-comment input{
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    padding-top: 10px;
+    background: transparent;
+}
